Fixed image alignment

--- a/styles.css
+++ b/styles.css
@@ -95,5 +95,5 @@ span a:hover {
 
 span a img {
     width: 30px; 
-    height: auto; 
+    height: 30px; 
 }
